Added files for new card game: Chicago. Also edited the highscore database and scaffolded new entities.

--- a/CardGames.Core/CardGames.Core.csproj
+++ b/CardGames.Core/CardGames.Core.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Cards\DeckUtils.cs" />
     <Compile Include="Cards\PlayingCard.cs" />
     <Compile Include="Cards\PlayingCardDeck.cs" />
+    <Compile Include="ChicagoCore.cs" />
     <Compile Include="HighOrLowCore.cs" />
     <Compile Include="Enums\CardSuit.cs" />
     <Compile Include="Enums\CardRank.cs" />
