Moved around some methods. Modified GetPlayerName method and added get number of players and their names functionality to Chicago.

--- a/CardGames.Core/CardGames.Core.csproj
+++ b/CardGames.Core/CardGames.Core.csproj
@@ -145,6 +145,7 @@
     <Compile Include="HighOrLowCore.cs" />
     <Compile Include="Enums\CardSuit.cs" />
     <Compile Include="Enums\CardRank.cs" />
+    <Compile Include="ICardGameCore.cs" />
     <Compile Include="Models\Entities\CardGamesContext.cs" />
     <Compile Include="Models\Entities\HighScore.cs" />
     <Compile Include="Models\HighScoreServices.cs" />
