--- a/CardGames.ConsoleVersion/CardGames.ConsoleVersion.csproj
+++ b/CardGames.ConsoleVersion/CardGames.ConsoleVersion.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\ClassLibraries\SamUtils\SamUtils.csproj" />
     <ProjectReference Include="..\CardGames.Core\CardGames.Core.csproj" />
   </ItemGroup>
 
