Added rules and hihscore to Chicago. And made the GetHighscores method sort by game argument

--- a/CardGames.Core/CardGames.Core.csproj
+++ b/CardGames.Core/CardGames.Core.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Cards\PlayingCard.cs" />
     <Compile Include="Cards\PlayingCardDeck.cs" />
     <Compile Include="ChicagoCore.cs" />
+    <Compile Include="Enums\CardGamesEnum.cs" />
     <Compile Include="HighOrLowCore.cs" />
     <Compile Include="Enums\CardSuit.cs" />
     <Compile Include="Enums\CardRank.cs" />
